Fix badge icon alignment

--- a/docusaurus/src/scss/badge.scss
+++ b/docusaurus/src/scss/badge.scss
@@ -232,6 +232,7 @@ main .badge--content {
   .strapi-icons {
     left: 2px;
     top: -2px;
+    vertical-align: bottom;
   }
 
   .badge__tooltip {
